iOS Safari fixes: Remove flexbox layouts on mobile Inject <use> elements with .append() instead of .html()

--- a/scss/topNamesScatterplot.scss
+++ b/scss/topNamesScatterplot.scss
@@ -100,9 +100,12 @@ $bp-larger-than-mobile: 'min-width: 768px';
 		position: relative;
 		height: 100vh;
 
-		display: flex;
-		flex-direction: column;
-		flex: 1 0 $sidebar-width;
+		// flexbox not working on iOS Safari
+		@media (#{$bp-larger-than-mobile}) {
+			display: flex;
+			flex-direction: column;
+			flex: 1 0 $sidebar-width;
+		}
 
 		width: 100%;
 		@media (#{$bp-larger-than-mobile}) {
@@ -132,7 +135,13 @@ $bp-larger-than-mobile: 'min-width: 768px';
 		$input-padding: 1.5rem;
 
 		width: 100%;
-		flex: 0 0 3.5rem;
+		
+		// flexbox not working on iOS Safari
+		height: 3.5rem;
+		@media (#{$bp-larger-than-mobile}) {
+			height: auto;
+			flex: 0 0 3.5rem;
+		}
 
 		div.awesomplete {
 			position: absolute;
@@ -221,6 +230,8 @@ $bp-larger-than-mobile: 'min-width: 768px';
 	.slider {
 		position: relative;
 		width: 100%;
+
+		// flexbox not working on iOS Safari
 		@media (#{$bp-larger-than-mobile}) {
 			flex: 1 0.25;
 		}
@@ -291,21 +302,36 @@ $bp-larger-than-mobile: 'min-width: 768px';
 	// sex toggles
 	//
 	.toggles {
-		flex: 0 0 auto;
 		position: relative;
 		width: 100%;
+		height: auto;
+
+		// flexbox not working on iOS Safari
+		@media (#{$bp-larger-than-mobile}) {
+			flex: 0 0 auto;
+		}
 
 		.toggles-container {
-			display: flex;
-			justify-content: space-around;
+			// flexbox not working on iOS Safari
+			text-align: center;
+			@media (#{$bp-larger-than-mobile}) {
+				display: flex;
+				justify-content: space-around;
+			}
 		}
 
 		$toggle-size: 4rem;
 		.sex-toggle {
+			// flexbox not working on iOS Safari
+			margin: 0 2rem;
+			@media (#{$bp-larger-than-mobile}) {
+				margin: 0;
+				flex: 0 0 $toggle-size;
+			}
+
 			display: inline-block;
 			width: $toggle-size;
 			height: $toggle-size;
-			flex: 0 0 $toggle-size;
 			box-sizing: border-box;
 
 			text-align: center;
@@ -414,17 +440,31 @@ $bp-larger-than-mobile: 'min-width: 768px';
 	// share icons
 	//
 	.share {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-between;
-
 		width: 100%;
-		// height: 2.5rem;
-		flex: 0 0 2.5rem;
+		height: 2.5rem;
+
+		// flexbox not working on iOS Safari
+		text-align: center;
+		@media (#{$bp-larger-than-mobile}) {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+
+			height: auto;
+			flex: 0 0 2.5rem;
+		}
+		
 		margin-top: 1rem;
 
 		.share-icon {
-			flex: 0 0 2.5rem;
+			// flexbox not working on iOS Safari
+			display: inline-block;
+			margin: 0 0.75rem;
+			@media (#{$bp-larger-than-mobile}) {
+				display: block;
+				margin: 0;
+				flex: 0 0 2.5rem;
+			}
 
 			svg {
 				fill: $label-color;
@@ -432,7 +472,17 @@ $bp-larger-than-mobile: 'min-width: 768px';
 		}
 
 		.info-modal-button {
-			flex: 0 0 2.5rem;
+			// flexbox not working on iOS Safari
+			display: inline-block;
+			margin: 0 1rem;
+			transform: translateY(-0.5rem);		// no idea why this is necessary.
+			@media (#{$bp-larger-than-mobile}) {
+				display: block;
+				margin: 0;
+				transform: none;
+				flex: 0 0 2.5rem;
+			}
+			
 			width: 40px;
 			height: 40px;
 
